Fixed preview button alignment. Changed the spinner colors to match the loading bar.

--- a/src/styles/chat-message.scss
+++ b/src/styles/chat-message.scss
@@ -4,6 +4,7 @@
   & .chat-images-expand-preview-button {
     position: absolute;
     padding-top: 0;
+    padding-bottom: 25px;
 
     width: 25px;
     height: 25px;
