--- a/src/styles/spinner.scss
+++ b/src/styles/spinner.scss
@@ -3,8 +3,8 @@
 }
 
 #chat-image-spinner {
-    border: 5px solid #f3f3f3;
-    border-top: 5px solid #555;
+    border: 5px solid #b2c3ff;
+    border-top: 5px solid #5d49ff;
     border-radius: 50%;
     width: 50px;
     height: 50px;
